refactor: modernize AssetType with switch expression and constant
- Replace if/else chain with switch expression on Integer.compare()
- Extract POLICY_ID_LENGTH = 56 constant (was magic number)
- Use unit.isBlank() instead of unit.trim().isEmpty()

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>